Fix width of init-screens on mobile

--- a/demo/mobile.less
+++ b/demo/mobile.less
@@ -21,9 +21,12 @@
 
 #initwrapper
 {
-  margin: auto auto;
-  width: auto;
-  border-radius: 0;
+  > div:first-child
+  {
+    margin: auto auto;
+    width: auto;
+    border-radius: 0;
+  }
 }
 
 #bottom > #mainBtns
